checkstyle + introduce root pom